<resources>
    <string name="app_name">football-score</string>
    <string name="local_visitante">Local - Visitante</string>
    <string name="_0_0">0 - 0</string>
    <string name="fue_un_empate">Fue un empate 😕</string>
    <string name="equipo_local">Equipo local</string>
    <string name="_1subtractionLocal">-1</string>
    <string name="_0resultLocal">0</string>
    <string name="_1additionLocal">+1</string>
    <string name="_1subtractionVisit">-1</string>
    <string name="_0resultVisit">0</string>
    <string name="_1additionVisit">+1</string>
    <string name="equipo_visitante">Equipo Visitante</string>
    <string name="image_football">Image football</string>
    <string name="save"><![CDATA[>]]></string>
    <string name="restart">Restart</string>
    <string name="gano_uno">"¡Ganó el %s ! \uD83C\uDF89", nameL</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="iniciar">Iniciar</string>
</resources>