<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/estadio"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/text_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/equipo_local"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white_transp"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.003" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="22dp"
            android:backgroundTint="@color/grey"
            android:selectAllOnFocus="false"
            android:text="@string/_1subtractionLocal"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/image_football"
            app:layout_constraintEnd_toStartOf="@+id/result_local"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_local"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/result_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/_0resultLocal"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_visit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_local"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button2"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/grey"
            android:selectAllOnFocus="false"
            android:text="@string/_1additionLocal"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/image_football"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.964"
            app:layout_constraintStart_toEndOf="@+id/result_local"
            app:layout_constraintTop_toBottomOf="@+id/text_local"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />


        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="22dp"
            android:backgroundTint="@color/grey"
            android:selectAllOnFocus="false"
            android:text="@string/_1subtractionVisit"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_visit"
            app:layout_constraintEnd_toStartOf="@+id/result_visit"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/result_visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/_0resultVisit"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_visit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_local"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button4"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="22dp"
            android:backgroundTint="@color/grey"
            android:selectAllOnFocus="false"
            android:text="@string/_1additionVisit"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_visit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.963"
            app:layout_constraintStart_toEndOf="@+id/result_visit"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/text_visit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/equipo_visitante"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white_transp"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.997" />

        <ImageView
            android:id="@+id/image_football"
            android:layout_width="101dp"
            android:layout_height="81dp"
            android:contentDescription="@string/image_football"
            android:src="@drawable/footbol"
            app:layout_constraintBottom_toTopOf="@+id/result_visit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_local"
            app:layout_constraintVertical_bias="0.50" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/grey"
            android:text="@string/save"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toEndOf="@+id/image_football"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="86dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="@color/grey"
            android:contentDescription="@string/restart"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toStartOf="@+id/image_football"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1"
            app:layout_constraintVertical_bias="0.50"
            app:srcCompat="@android:drawable/ic_popup_sync" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>